Fix an issue with completion percent was not visible when hitting 100%

--- a/styles.css
+++ b/styles.css
@@ -212,35 +212,28 @@
         #page-course-view-softcourse #region-main .course-content #softcourse-sections #softcourse-tabs .softcourse-section .softcourse-section-body .softcourse-section-info {
           display: flex;
           height: 30px;
-          width: 100%; }
+          width: 100%;
+          align-items: center;
+          justify-content: center;
+          margin-bottom: 0;
+          margin-top: auto; }
         #page-course-view-softcourse #region-main .course-content #softcourse-sections #softcourse-tabs .softcourse-section .softcourse-section-body .fa-leanpub {
-          bottom: 15px;
           color: orange;
           color: brandcolor;
           font-size: 1rem;
           opacity: 0;
-          position: absolute;
           transition: opacity .5s ease; }
           #page-course-view-softcourse #region-main .course-content #softcourse-sections #softcourse-tabs .softcourse-section .softcourse-section-body .fa-leanpub::before {
             font-size: 1.2rem; }
         #page-course-view-softcourse #region-main .course-content #softcourse-sections #softcourse-tabs .softcourse-section .softcourse-section-body .softcourse-activities-count {
-          bottom: 11px;
           color: orange;
           color: brandcolor;
           font-size: 1rem;
-          left: 30px;
           opacity: 0;
-          position: absolute;
           transition: opacity .5s ease; }
-          @media only screen and (max-width: 710px) {
-            #page-course-view-softcourse #region-main .course-content #softcourse-sections #softcourse-tabs .softcourse-section .softcourse-section-body .softcourse-activities-count {
-              left: 127px; } }
         #page-course-view-softcourse #region-main .course-content #softcourse-sections #softcourse-tabs .softcourse-section .softcourse-section-body .progress {
-          bottom: 15px;
           display: inline-flex;
           opacity: 0;
-          position: absolute;
-          right: 55px;
           transition: opacity .5s ease;
           width: calc(100% - 100px); }
           @media only screen and (max-width: 710px) {
@@ -249,13 +242,10 @@
           #page-course-view-softcourse #region-main .course-content #softcourse-sections #softcourse-tabs .softcourse-section .softcourse-section-body .progress .progress-bar {
             display: inline-flex; }
         #page-course-view-softcourse #region-main .course-content #softcourse-sections #softcourse-tabs .softcourse-section .softcourse-section-body .progress-percent {
-          bottom: 13px;
           color: orange;
           color: brandcolor;
           margin-left: 5px;
           opacity: 0;
-          position: absolute;
-          right: 15px;
           transition: opacity .5s ease; }
         @media only screen and (max-width: 710px) {
           #page-course-view-softcourse #region-main .course-content #softcourse-sections #softcourse-tabs .softcourse-section .softcourse-section-body {
